--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "d3": "^5.16.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
+    "rc-slider": "^9.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
